--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
