--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
 				<version>2.3.5</version>
 		</dependency>
 		<dependency>
+          <groupId>com.twilio.sdk</groupId>
+          <artifactId>twilio</artifactId>
+          <version>8.25.0</version>
+          <scope>compile</scope>
+       </dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.20</version>
