--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,22 @@
 				<artifactId>modelmapper</artifactId>
 				<version>2.3.5</version>
 		</dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+				<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20210307</version>
+</dependency>
 		<dependency>
           <groupId>com.twilio.sdk</groupId>
           <artifactId>twilio</artifactId>
