--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.show-sql=true
 spring.application.name=property-service
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/apa
+spring.datasource.url=jdbc:mysql://localhost:3306/apa?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=IamLeo0708
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
