--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ azure.storage.blob-endpoint=http://qpastorage2022.blob.core.windows.net
 twilio.account-sid=ACd99883a30e32acc5a90054d13bb2eee5
 twilio.auth-token=d5014052c00734cfe1d21479a50f51b2
 twilio.message-service-sid=MG84d1d379468aabe1e6dbf238b40e47f6
+app.firebase-config-file=firebase/fcm-key.json
+
