--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>7.0.0</version>
+        </dependency>
+		<dependency>
 				<groupId>org.modelmapper</groupId>
 				<artifactId>modelmapper</artifactId>
 				<version>2.3.5</version>
