--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,5 @@ spring.mail.protocol=smtp
 spring.mail.username={MAIL_USERNAME}
 spring.mail.password={MAIL_PASSWORD}
 spring.mail.port=587
-
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
