[GiangTH] fix bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.cache.type=redis
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp-mail.outlook.com
 spring.mail.protocol=smtp
 spring.mail.username={MAIL_USERNAME}
 spring.mail.password={MAIL_PASSWORD}
