[GiangTH] fix bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,5 @@ spring.mail.password={MAIL_PASSWORD}
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+mailgun.domain={MAILGUN_DOMAIN}
+mailgun.key={MAILGUN_KEY}
