--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,11 @@
     <groupId>org.springframework.data</groupId>
     <artifactId>spring-data-redis</artifactId>
  </dependency>
-
+<dependency>
+    <groupId>com.mashape.unirest</groupId>
+    <artifactId>unirest-java</artifactId>
+    <version>1.4.9</version>
+</dependency>
 <dependency>
     <groupId>redis.clients</groupId>
     <artifactId>jedis</artifactId>
