--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,4 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mailgun.domain={MAILGUN_DOMAIN}
-mailgun.key={MAILGUN_KEY}
+mailgun.key={MAILGUN_API_KEY}
