[GiangTH] fix bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,10 +28,10 @@ spring.cache.type=redis
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.mailgun.org
 spring.mail.protocol=smtp
-spring.mail.username={MAIL_USERNAME}
-spring.mail.password={MAIL_PASSWORD}
+spring.mail.username={MAILGUN_SMTP_LOGIN}
+spring.mail.password={MAILGUN_SMTP_PASSWORD}
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
