--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
     <version>1.4.9</version>
 </dependency>
 <dependency>
+    <groupId>net.sargue</groupId>
+    <artifactId>mailgun</artifactId>
+    <version>1.10.0</version>
+</dependency>
+<dependency>
     <groupId>redis.clients</groupId>
     <artifactId>jedis</artifactId>
     <type>jar</type>
