--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,11 +29,15 @@ spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.mailgun.org
-spring.mail.protocol=smtp
 spring.mail.username={MAILGUN_SMTP_LOGIN}
 spring.mail.password={MAILGUN_SMTP_PASSWORD}
 spring.mail.port=587
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
 mailgun.domain={MAILGUN_DOMAIN}
 mailgun.key={MAILGUN_API_KEY}
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.from=contact@tericcabrel.com
+spring.mail.test-connection=false
+mail.from.name=QPA
